--- a/www/html/assets/css/style.css
+++ b/www/html/assets/css/style.css
@@ -28,9 +28,9 @@ body {
 
 .sideBar {
      background-color: #494F55;
-     /* flex: 1 0 15%; */
+     /* flex: 1 0; */
      padding-top: 4rem;
-     max-width: 15%;
+     /* max-width: 15%; */
      width: 0;
      min-width: 0;
      overflow-y: scroll;
@@ -44,8 +44,15 @@ body {
 
 .sideBarChange  {
     /* display: block !important; */
-    width: 20%;
+    width: 50%;
+}
 
+@media only screen and (max-width: 600px) {
+    .sideBarChange  {
+        /* display: block !important; */
+        width: 100% !important
+    }
+    
 }
 
 .sideBar::-webkit-scrollbar {
@@ -55,9 +62,13 @@ body {
 
 .main {
      background-color: whitesmoke;
-     flex: 4 0 85%;
+     flex: 1 0;
      padding-top: 4rem;
      /* max-width: 85%; */
+}
+
+.mainHidden {
+    display: none;
 }
 
 .sideBarWrapper {
@@ -106,9 +117,14 @@ body {
 
 .navAccount {
     cursor: pointer;
+}
+
+.navAccountImg {
+    height: 50px;
+    width: 50px;
+
     border: 0;
     border-radius: 24px;
-
 }
 
 .bar1, .bar2, .bar3 {
