--- a/www/html/assets/css/style.css
+++ b/www/html/assets/css/style.css
@@ -7,7 +7,8 @@ body {
      width: 100vw;
      height: calc(100vh);
      flex-direction: row;
-    overflow: hidden;
+     overflow: hidden;
+    
 }
 
 /* ::-webkit-scrollbar {
@@ -26,7 +27,7 @@ body {
 }
 
 .sideBar {
-     background-color: #494F55;
+     /* background-color: #494F55; */
      /* flex: 1 0; */
      padding-top: 4rem;
      /* max-width: 15%; */
@@ -46,7 +47,7 @@ body {
     width: 50%;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 796px) {
     .sideBarChange  {
         /* display: block !important; */
         width: 100% !important
@@ -70,6 +71,7 @@ body {
 .sideBar::-webkit-scrollbar {
     display: none;
     scrollbar-width: none;
+    visibility: hidden;
 }
 
 .main {
@@ -89,6 +91,7 @@ body {
     align-items: center;
     height: 100%;
     min-width: 15%;
+    padding: 3%;
 
 }
 
@@ -98,6 +101,7 @@ body {
     height: calc(100%);
     min-width: 15%;
     width: 100%;
+    padding: 3%;
     /* padding: 1rem; */
 
 }
@@ -158,6 +162,7 @@ body {
 
 .calendarWrapper {
     width: 100%;
+    transition: 0.4s;
     /* height: 100%;
     overflow-x: hidden;
     overflow-wrap: hard; */
