--- a/www/html/assets/css/style.css
+++ b/www/html/assets/css/style.css
@@ -7,7 +7,7 @@ body {
      width: 100vw;
      height: calc(100vh);
      flex-direction: row;
-     overflow: hidden;
+     /* overflow: hidden; */
     
 }
 
@@ -178,11 +178,30 @@ body {
 
 .editor {
     background-color: inherit;
-    /* width: 100%; */
-    /* flex: 1 0 100%; */
     resize: none;
-    max-height: calc(95%);
-    height: 95%
+    padding: .5rem;
+    max-width: calc(100vw);
+    word-wrap: break-word;
+    max-height: calc(100vh);
+    height: 100vh;
+
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;
+
+    overflow: scroll;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.editor::-webkit-scrollbar {
+    display: none;
+  }
+
+.cdx-block {
+    /* max-width: calc(95%); */
+    /* padding: 0; */
+    /* margin: 0; */
+
+    border-bottom: #000000 .5px solid;
 }
 
 .editor::-webkit-scrollbar {
